Switch to deb package