@@ -5,16 +5,31 @@ version := "1.0"
 scalaVersion in ThisBuild := "2.11.8"
 
 lazy val root = (project in file(".")).enablePlugins(PlayScala, RiffRaffArtifact)
-  .settings(
-    name in Universal := normalizedName.value,
-    topLevelDirectory in Universal := Some(normalizedName.value),
-    riffRaffPackageName := name.value,
-    riffRaffManifestProjectName := riffRaffPackageName.value,
-    riffRaffBuildIdentifier :=  Option(System.getenv("CIRCLE_BUILD_NUM")).getOrElse("dev"),
-    riffRaffUploadArtifactBucket := Option("riffraff-artifact"),
-    riffRaffUploadManifestBucket := Option("riffraff-builds"),
-    riffRaffManifestBranch := Option(System.getenv("CIRCLE_BRANCH")).getOrElse("dev"),
-    riffRaffPackageType := (packageZipTarball in config("universal")).value,
-    riffRaffArtifactResources += riffRaffPackageType.value -> s"packages/${name.value}/${name.value}.tgz"
-  )
 
+import com.typesafe.sbt.packager.archetypes.ServerLoader.Systemd
+serverLoading in Debian := Systemd
+
+debianPackageDependencies := Seq("openjdk-8-jre-headless")
+maintainer := "Simon Hildrew <simon.hildrew@theguardian.com>"
+packageSummary := "IPv6 Connectivity checker"
+packageDescription := """Check whether a user has an IPv6 or IPv4 connection to the application"""
+
+riffRaffPackageType := (packageBin in Debian).value
+name in Universal := normalizedName.value
+topLevelDirectory in Universal := Some(normalizedName.value)
+riffRaffPackageName := name.value
+riffRaffManifestProjectName := riffRaffPackageName.value
+riffRaffBuildIdentifier :=  Option(System.getenv("CIRCLE_BUILD_NUM")).getOrElse("dev")
+riffRaffUploadArtifactBucket := Option("riffraff-artifact")
+riffRaffUploadManifestBucket := Option("riffraff-builds")
+riffRaffManifestBranch := Option(System.getenv("CIRCLE_BRANCH")).getOrElse("dev")
+
+javaOptions in Universal ++= Seq(
+  "-Dpidfile.path=/dev/null",
+  "-J-XX:MaxRAMFraction=2",
+  "-J-XX:InitialRAMFraction=2",
+  "-J-XX:MaxMetaspaceSize=500m",
+  "-J-XX:+PrintGCDetails",
+  "-J-XX:+PrintGCDateStamps",
+  s"-J-Xloggc:/var/log/${packageName.value}/gc.log"
+)
